--- a/apps/streamlight.html
+++ b/apps/streamlight.html
@@ -1,14 +1,56 @@
 <!doctype html>
 <html>
+
 <head>
 <meta charset="utf-8">
 <title>Streamlight Prototype</title>
+
+<!--  LOAD D3 FIRST -->
+<script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+
+<style>
+body{
+  font-family:system-ui;
+  padding:40px;
+  max-width:700px;
+  margin:auto;
+}
+button{
+  padding:10px 16px;
+  font-size:16px;
+  margin-top:10px;
+}
+.result{
+  margin-top:20px;
+  padding:15px;
+  background:#f3f3f3;
+  border-radius:8px;
+}
+</style>
+
+</head>
+
+<body>
+
+<h1>🏌️ Streamlight — Season Pass Optimizer</h1>
+
+<label>Rounds you expect to play:</label><br>
+<input id="rounds" type="number" value="25">
+
+<br><br>
+
+<button onclick="calculate()">
+Calculate Best Option
+</button>
+
+<div id="output" class="result"></div>
 
 <script>
 
 let costs=[];
 
-d3.csv("rounds_costs.csv").then(raw=>{
+// LOAD CSV
+d3.csv("rounds_cost.csv").then(raw=>{
 
   costs = raw.map(d=>({
     course:d.course,
@@ -33,16 +75,14 @@ function calculate(){
   const rounds =
     +document.getElementById("rounds").value;
 
-  const cartUsage = 0.5; // 50% for now
+  const cartUsage = 0.5;
 
-  // average round cost
   const avgRound =
     d3.mean(costs,
       d=> d.green + d.cart*cartUsage
     );
 
-  const paygo =
-    rounds * avgRound;
+  const paygo = rounds * avgRound;
 
   const coursePass = 850;
   const allInclusive = 720;
@@ -75,5 +115,6 @@ function calculate(){
 }
 
 </script>
+
 </body>
 </html>
